kubernetes/base/blog-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-ui
  namespace: dev
  labels:
    app: blog-ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: blog-ui
