kubernetes/base/blog-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ui
spec:
  ingressClassName: public
  rules:
  - host: blog.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-ui
            port:
              number: 80
